--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 
     <!-- Register button slice (clickable) -->
     <a href="https://www.sirkil.com/JoinEnteroZone" target="_blank">
-      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/6.png" alt="Register">
+      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/6.png" alt="Register Now">
     </a>
 
     <!-- Agenda button slice (clickable) -->
     <a href="https://drive.google.com/file/d/1rPgaLYY-v-CuyN41qX806GF1IpsCCLG9/view?usp=sharing" target="_blank">
-      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/7.jpg" alt="Browse Agenda">
+      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/7.jpg" alt="Explore Agenda">
     </a>
   </div>
 </body>
 </html>
+
