--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/1.png" alt="Header">
     <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/2.png" alt="Header">
     <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/3.png" alt="Header">
-    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/4.png" alt="Header">
+    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/4.jpg" alt="Header">
     <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/5.png" alt="Header">
 
 
     <!-- Register button slice (clickable) -->
     <a href="https://www.sirkil.com/JoinEnteroZone" target="_blank">
-      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/6.png" alt="Register Now">
+      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/6.jpg" alt="Register Now">
     </a>
 
     <!-- Agenda button slice (clickable) -->
@@ -45,4 +45,3 @@
   </div>
 </body>
 </html>
-
