--- a/tur_invetation.html
+++ b/tur_invetation.html
@@ -26,10 +26,10 @@
 </head>
 <body>
   <div class="flyer">
-    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/TUR/1.gif" alt="Header">
-    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/TUR/2.gif" alt="Header">
-    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/TUR/3.gif" alt="Header">
-    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/TUR/4.gif" alt="Header">
+    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/TUR/1.jpg" alt="Header">
+    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/TUR/2.jpg" alt="Header">
+    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/TUR/3.jpg" alt="Header">
+    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/TUR/4.jpg" alt="Header">
 
 
     <!-- Register button slice (clickable) -->
@@ -39,7 +39,7 @@
 
     <!-- Agenda button slice (clickable) -->
     <a href="https://drive.google.com/file/d/17HpnV_Wx5XWkW1JWinqlIEi2VhoJ9GvN/view?usp=sharing" target="_blank">
-      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/TUR/6.gif" alt="Gündeme göz at">
+      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/TUR/6.jpg" alt="Gündeme göz at">
     </a>
   </div>
 </body>
