--- a/en_invitation.html
+++ b/en_invitation.html
@@ -26,19 +26,19 @@
 </head>
 <body>
   <div class="flyer">
-    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/FRA/1.jpg" alt="Header">
-    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/FRA/2.jpg" alt="Header">
-    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/FRA/3.jpg" alt="Header">
+    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/EN/1.jpg" alt="Header">
+    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/EN/2.jpg" alt="Header">
+    <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/EN/3.jpg" alt="Header">
 
 
     <!-- Register button slice (clickable) -->
     <a href="https://www.sirkil.com/JoinEnteroZone" target="_blank">
-      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/FRA/4.jpg" alt="Inscrivez-vous maintenant">
+      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/EN/4.jpg" alt="Register Now">
     </a>
 
     <!-- Agenda button slice (clickable) -->
-    <a href="https://drive.google.com/file/d/1139kUWImbo1YLH4nZod7ubmvLmRyuY9K/view?usp=sharing" target="_blank">
-      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/FRA/5.jpg" alt="Parcourir l’agenda">
+    <a href="https://drive.google.com/file/d/1rPgaLYY-v-CuyN41qX806GF1IpsCCLG9/view?usp=sharing" target="_blank">
+      <img src="https://raw.githubusercontent.com/Sirkil/Entro_Meet/main/EN/5.jpg" alt="Explore Agenda">
     </a>
   </div>
 </body>
